# RAG

./: .gitignore  Makefile  pyproject.toml
data/processed/: chunks
moulinette/: README.md
student/: __main__.py  color.py  evaluate.py
student/answering/: answer.py
student/indexing/: index.py
student/models/: __init__.py  answered_question.py  minimal_answer.py  minimal_search_results.py  minimal_source.py  rag_dataset.py  student_search_results.py  student_search_results_and_answer.py  unanswered_question.py
student/searching/: query_expander.py  search.py
