[project]
name = "RAG"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bm25s>=0.3.3",
    "chromadb>=1.5.8",
    "fire>=0.7.1",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.13.0",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
    "vllm>=0.19.1",
]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
]
